Fix webfont on mobile

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -11,8 +11,6 @@
 
 @import "admin";
 
-// @import url("https://fonts.googleapis.com/css2?family=Raleway&display=swap");
-
 * {
   box-sizing: border-box;
 }
@@ -44,12 +42,8 @@ body {
   left: 0;
 }
 #app {
-  font-family: "Raleway", sans-serif;
-  // -webkit-font-smoothing: antialiased;
-  // -moz-osx-font-smoothing: grayscale;
   text-align: left;
   color: #2c3e50;
-  // color: darken($base-color, 65);
 }
 
 header {
